--- a/hector_qrcode_detection/CMakeLists.txt
+++ b/hector_qrcode_detection/CMakeLists.txt
@@ -1,50 +1,39 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(hector_qrcode_detection)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+find_package(catkin REQUIRED COMPONENTS
+  image_transport
+  cv_bridge
+  tf
+  nodelet
+  hector_worldmodel_msgs)
 
-rosbuild_init()
+set(ZBar0_DIR ${hector_qrcode_detection_SOURCE_DIR})
+find_package(ZBar0 REQUIRED)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-#uncomment if you have defined messages
-#rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
-
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
-
-# download and build zbar library
-add_custom_command(
-  OUTPUT lib/libzbar.so
-  COMMAND make INSTALL_DIR=${PROJECT_SOURCE_DIR} CFLAGS=""
-  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/3rdparty/zbar
-)
-add_custom_target(
-  zbar_built
-  DEPENDS lib/libzbar.so
+catkin_package(
+  LIBRARIES qrcode_detection
 )
 
-include_directories(include)
+include_directories(
+  include ${catkin_INCLUDE_DIR}
+  ${ZBAR_INCLUDE_DIR}
+)
 
-add_library(zbar SHARED IMPORTED)
-add_dependencies(zbar zbar_built)
-set_target_properties(zbar PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/lib/libzbar.so)
+add_library(qrcode_detection src/qrcode_detection.cpp)
+target_link_libraries(qrcode_detection 
+  ${ZBAR_LIBRARIES} ${catkin_LIBRARIES})
 
-add_subdirectory(src)
+add_library(qrcode_detection_nodelet src/nodelet.cpp)
+target_link_libraries(qrcode_detection_nodelet 
+  qrcode_detection ${ZBAR_LIBRARIES} ${catkin_LIBRARIES})
 
+add_executable(qrcode_detection_node src/node.cpp)
+target_link_libraries(qrcode_detection_node 
+  qrcode_detection ${ZBAR_LIBRARIES} ${catkin_LIBRARIES})
+
+install(TARGETS qrcode_detection qrcode_detection_nodelet qrcode_detection_node
+   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
